[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "soundscape_IR"
version = "1.1.0"
license = {text="MIT"}
requires-python = "~=3.8"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "numpy==1.21.6",
    "scipy==1.7.3",
    "matplotlib==3.2.2",
    "plotly==5.5.0",
    "pandas==1.3.5",
    "geopandas==0.9.0",
    "audioread==2.1.9",
    "librosa==0.8.1",
    "scikit-learn==0.23.2",
]