[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "soundscape_IR"
version = "1.1.0"
license = {text="MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "plotly=",
    "pandas",
    "geopandas",
    "audioread",
    "librosa",
    "scikit-learn",
]